add affine layer forward pass

--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -48,11 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:  (48000, 3, 32, 32)\n",
+      "y_train:  (48000,)\n",
+      "X_val:  (1000, 3, 32, 32)\n",
+      "y_val:  (1000,)\n",
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n",
+      "Testing affine_forward function:\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "\n",
@@ -85,11 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:  (48000, 3, 32, 32)\n",
+      "y_train:  (48000,)\n",
+      "X_val:  (1000, 3, 32, 32)\n",
+      "y_val:  (1000,)\n",
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "\n",
