--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -48,22 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train:  (48000, 3, 32, 32)\n",
-      "y_train:  (48000,)\n",
-      "X_val:  (1000, 3, 32, 32)\n",
-      "y_val:  (1000,)\n",
-      "X_test:  (1000, 3, 32, 32)\n",
-      "y_test:  (1000,)\n",
-      "Testing affine_forward function:\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Testing affine_backward function:\n",
+      "dx error:  1.43724234054e-09\n",
+      "dw error:  7.62210541989e-10\n",
+      "db error:  1.0\n"
      ]
     }
    ],
@@ -99,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,11 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_forward function:\n",
+      "difference:  9.76984772881e-10\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_forward function\n",
     "\n",
@@ -173,11 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_backward function:\n",
+      "dx error:  6.05531009865e-11\n",
+      "dw error:  1.57768936091e-10\n",
+      "db error:  6.61440939306e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_backward function\n",
     "\n",
