--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -48,20 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing affine_backward function:\n",
-      "dx error:  1.43724234054e-09\n",
-      "dw error:  7.62210541989e-10\n",
-      "db error:  1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
     "\n",
@@ -94,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +172,9 @@
      "output_type": "stream",
      "text": [
       "Testing affine_backward function:\n",
-      "dx error:  6.05531009865e-11\n",
-      "dw error:  1.57768936091e-10\n",
-      "db error:  6.61440939306e-12\n"
+      "dx error:  5.21951888965e-10\n",
+      "dw error:  4.07182241395e-09\n",
+      "db error:  2.19324691288e-11\n"
      ]
     }
    ],
@@ -221,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "dx error:  1.0\n"
+      "dx error:  3.27563713122e-12\n"
      ]
     }
    ],
@@ -296,11 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward:\n",
+      "dx error:  7.29412849368e-11\n",
+      "dw error:  2.03025742076e-10\n",
+      "db error:  1.89289600302e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from dl4cv.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "\n",
@@ -334,11 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.30262146168\n",
+      "dx error:  9.6223747477e-09\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes, num_inputs = 10, 50\n",
     "x = 0.001 * np.random.randn(num_inputs, num_classes)\n",
@@ -365,11 +372,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 1.52e-08\n",
+      "W2 relative error: 3.48e-10\n",
+      "b1 relative error: 6.55e-09\n",
+      "b2 relative error: 4.33e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 8.18e-07\n",
+      "W2 relative error: 2.85e-08\n",
+      "b1 relative error: 1.09e-09\n",
+      "b2 relative error: 9.09e-10\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H, C = 3, 5, 50, 7\n",
     "X = np.random.randn(N, D)\n",
@@ -937,18 +962,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
