add fully connected modular net

--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -1057,11 +1057,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running check with reg =  0\n",
+      "Num Layers:  3\n",
+      "\tLayer 1: 15 - 20\n",
+      "\tLayer 2: 20 - 30\n",
+      "\tLayer 3: 30 - 10\n",
+      "\n",
+      "\n",
+      "----------------------------\n",
+      "Initial loss:  2.30749027441\n",
+      "W1 relative error: 1.03e-06\n",
+      "W2 relative error: 1.52e-05\n",
+      "W3 relative error: 1.87e-07\n",
+      "b1 relative error: 6.93e-09\n",
+      "b2 relative error: 9.44e-08\n",
+      "b3 relative error: 1.22e-10\n",
+      "Running check with reg =  3.14\n",
+      "Num Layers:  3\n",
+      "\tLayer 1: 15 - 20\n",
+      "\tLayer 2: 20 - 30\n",
+      "\tLayer 3: 30 - 10\n",
+      "\n",
+      "\n",
+      "----------------------------\n",
+      "Initial loss:  5.54771489862\n",
+      "W1 relative error: 7.63e-09\n",
+      "W2 relative error: 2.26e-08\n",
+      "W3 relative error: 2.66e-06\n",
+      "b1 relative error: 9.70e-09\n",
+      "b2 relative error: 5.42e-09\n",
+      "b3 relative error: 1.21e-10\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
     "X = np.random.randn(N, D)\n",
@@ -1090,12 +1125,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num Layers:  3\n",
+      "\tLayer 1: 3072 - 100\n",
+      "\tLayer 2: 100 - 100\n",
+      "\tLayer 3: 100 - 10\n",
+      "\n",
+      "\n",
+      "----------------------------\n",
+      "(Iteration 1 / 40) loss: inf\n",
+      "(Epoch 0 / 20) train acc: 0.280000; val_acc: 0.109000\n",
+      "(Epoch 1 / 20) train acc: 0.160000; val_acc: 0.111000\n",
+      "(Epoch 2 / 20) train acc: 0.320000; val_acc: 0.108000\n",
+      "(Epoch 3 / 20) train acc: 0.600000; val_acc: 0.142000\n",
+      "(Epoch 4 / 20) train acc: 0.800000; val_acc: 0.163000\n",
+      "(Epoch 5 / 20) train acc: 0.820000; val_acc: 0.168000\n",
+      "(Iteration 11 / 40) loss: inf\n",
+      "(Epoch 6 / 20) train acc: 0.920000; val_acc: 0.171000\n",
+      "(Epoch 7 / 20) train acc: 0.940000; val_acc: 0.171000\n",
+      "(Epoch 8 / 20) train acc: 0.980000; val_acc: 0.169000\n",
+      "(Epoch 9 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 10 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Iteration 21 / 40) loss: 0.000000\n",
+      "(Epoch 11 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 12 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 13 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 14 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 15 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Iteration 31 / 40) loss: 0.000000\n",
+      "(Epoch 16 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 17 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 18 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 19 / 20) train acc: 1.000000; val_acc: 0.168000\n",
+      "(Epoch 20 / 20) train acc: 1.000000; val_acc: 0.168000\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAnMAAAHwCAYAAADNfOnlAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAH+JJREFUeJzt3Xu0rXVd7/HPN1A0L4iAqaBtS/LW\nxcsS7aQdS8VLGWR2RLOo7KCdYWUWht0zO5GadjkeTxyzKO9DTckyUtFKTykbxAsZgmixBRFDUdJS\n4Hv+mM/O5R7rMhd7rTXXj/16jbHGWvOZv/mbv8UzFrx5nmfOWd0dAADG9FWLXgAAADecmAMAGJiY\nAwAYmJgDABiYmAMAGJiYAwAYmJgDdrSqOqiqrqmqO2/m2BuwjudU1R9v9ryrPNfDqupja9z/kqr6\n+e1YC7DzHbzoBQA3LlV1zbKbX53kP5JcN91+Sne/fCPzdfd1SW652WNH1t0/Ns+4qtqT5End/Y6t\nXRGwSGIO2FTd/Z8xNR1d+rHufutq46vq4O6+djvWxvzsFxiH06zAtppOV766ql5ZVZ9L8qSq+taq\n+oeq+kxVXV5Vv1dVN5nGH1xVXVW7ptsvm+5/c1V9rqr+vqrustGx0/2PqqoPV9XVVfX7VfWuqvrh\nOX+PE6rqgmnNZ1fV3Zbd9/NVdVlVfbaq/qmqHjJtf2BVnTdtv6KqnrfOczyzqq6c5vqhZdtfVlW/\nOv18u6r6y2kdV1XV307bX5nkjknePJ16fsYc695TVadU1QeSfL6qnlVVr95nTS+uqufP888I2B5i\nDliE703yiiSHJnl1kmuT/FSSI5J8W5JHJnnKGo9/YpJfSnLbJP+S5Nc3OraqbpfkNUlOmZ73o0mO\nnWfxVXWPJC9L8hNJjkzy1iR/XlU3qap7TWu/b3ffOsmjpudNkt9P8rxp+12TvHaNpzk6yc0zC7Kn\nJnlxVd16hXGnJLlkWsftp9813f2EJJcleVR337K7X7DWupfNd+K05kOT/GmS79r7vFV10yTfP20H\ndggxByzCO7v7z7v7+u7+Qnef093v7u5ru/uSJKcn+a9rPP613b27u7+U5OVJ7n0Dxn53kvO7+43T\nfS9M8qk5139ikjO7++zpsacluXWSB2QWpjdLcq/pVOVHp98pSb6U5JiqOry7P9fd717jOf49yXO6\n+0vdfWZm1x5+wwrjvpRZ8N25u7/Y3X9zA9e91+92955pv+xJ8vdJvm+679FJLuvu963xHMA2E3PA\nIly6/EZV3b2q/qKqPlFVn03y7MyOlq3mE8t+/nzWftHDamPvuHwd3d1J9syx9r2P/edlj71+euxR\n3X1hkp/J7Hf45HQ6+fbT0B9Jcs8kF1bVe6rq0Ws8x6emF3SstPblTpvW8raq+khVnXJD1r1szKX7\nPOaMJE+afn5SHJWDHUfMAYvQ+9z+gyQfTHLX6RTkLyepLV7D5ZmdykySVFXlK6NmLZcl+dplj/2q\naa6PJ0l3v6y7vy3JXZIclOQ3p+0XdveJSW6X5LeTvK6qbrY/v0R3f7a7f7q7dyU5IcnPVdXeo5r7\n/nNec92rPOb1Se43nT5+VGanx4EdRMwBO8Gtklyd5N+m67rWul5us7wpyX2r6jFVdXBm1+wdOedj\nX5Pke6rqIdP1Zqck+VySd1fVParqO6rqkCRfmL6uS5Kq+sGqOmI6InZ1ZuF0/f78EtP6v36K0aun\n59p7RO+KJF83z7pXm7+7P5/kz5K8Msm7uvvjq40FFkPMATvBzyQ5KbOw+IPMXhSxpbr7iiSPT/KC\nJP+a5OuTvDeza9PWe+wFma33xUmuzOwFG98zXYd2SJLnZnb93SeSHJbkF6eHPjrJh6ZX8T4/yeO7\n+4v7+avcLcnZSa5J8q7Mrnl753Tf/0zya9MrV5++zrrXckaSb4pTrLAj1ewyEYADW1UdlNlpyMd1\n998tej07SVV9XZL3J7l9d1+z3nhgezkyBxywquqRVXXodEr0lzJ7Jep7FrysHWW6ru4ZSV4h5GBn\n8gkQwIHsQZm9XclNk1yQ5ITuXvc064Giqg7N7MURH0vyiMWuBliN06wAAANzmhUAYGBiDgBgYAfU\nNXNHHHFE79q1a9HLAABY17nnnvup7l73/S8PqJjbtWtXdu/evehlAACsq6r+ef1RTrMCAAxNzAEA\nDEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxM\nzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwB\nAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAM\nTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzM\nAQAMTMwBAAxMzAEADEzMAQAMTMwBAAxMzAEADEzMAQAMbKExV1WPrKoLq+riqjp1hfsPqapXT/e/\nu6p27XP/navqmqr62e1aMwDATrKwmKuqg5K8KMmjktwzyROq6p77DHtykk93912TvDDJb+1z/wuT\nvHmr1woAsFMt8sjcsUku7u5LuvuLSV6V5Ph9xhyf5Izp59cmeWhVVZJU1QlJLklywTatFwBgx1lk\nzB2V5NJlt/dM21Yc093XJrk6yeFVdYskP5fk19Z7kqo6uap2V9XuK6+8clMWDgCwUywy5mqFbT3n\nmF9L8sLuvma9J+nu07t7qbuXjjzyyBuwTACAnevgBT73niR3Wnb76CSXrTJmT1UdnOTQJFcleUCS\nx1XVc5PcJsn1VfXv3f2/tn7ZAAA7xyJj7pwkx1TVXZJ8PMmJSZ64z5gzk5yU5O+TPC7J2d3dSR68\nd0BV/WqSa4QcAHAgWljMdfe1VfW0JGclOSjJS7v7gqp6dpLd3X1mkj9M8qdVdXFmR+ROXNR6AQB2\nopod6DowLC0t9e7duxe9DACAdVXVud29tN44nwABADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAw\nMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAx\nBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcA\nMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAw\nMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEH\nADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAw\nMDEHADAwMQcAMDAxBwAwMDEHADAwMQcAMDAxBwAwMDEHADCwhcZcVT2yqi6sqour6tQV7j+kql49\n3f/uqto1bX94VZ1bVR+Yvn/ndq8dAGAnWFjMVdVBSV6U5FFJ7pnkCVV1z32GPTnJp7v7rklemOS3\npu2fSvKY7v6mJCcl+dPtWTUAwM6yyCNzxya5uLsv6e4vJnlVkuP3GXN8kjOmn1+b5KFVVd393u6+\nbNp+QZKbVdUh27JqAIAdZJExd1SSS5fd3jNtW3FMd1+b5Ookh+8z5vuSvLe7/2OlJ6mqk6tqd1Xt\nvvLKKzdl4QAAO8UiY65W2NYbGVNV98rs1OtTVnuS7j69u5e6e+nII4+8QQsFANipFhlze5Lcadnt\no5NcttqYqjo4yaFJrppuH53kz5L8UHd/ZMtXCwCwAy0y5s5JckxV3aWqbprkxCRn7jPmzMxe4JAk\nj0tydnd3Vd0myV8keVZ3v2vbVgwAsMMsLOama+CeluSsJB9K8pruvqCqnl1V3zMN+8Mkh1fVxUme\nkWTv25c8Lcldk/xSVZ0/fd1um38FAICFq+59L1O78VpaWurdu3cvehkAAOuqqnO7e2m9cT4BAgBg\nYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBi\nDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4A\nYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBg\nYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGAbirmaucVWLQYAgI1ZN+aq6k+q6tZV\n9dVJLkjy0ap6xtYvDQCA9cxzZO6buvuzSU5I8tdJjk7yw1u5KAAA5jNPzN20qg5OcnySN3T3F5Nc\nv7XLAgBgHvPE3EuS/EuSw5L8TVXdOck1W7oqAADmsm7MdfcLu/uO3X1cd3eSS5N859YvDQCA9czz\nAoinVdWtp5//IMm7kzx4qxcGAMD65jnNenJ3f7aqjktyVJIfT/LcrV0WAADzmCfmevr+qCR/1N3n\nzvk4AAC22DxR9r6q+sskj0ny5qq6Zb4ceAAALNDBc4z5kST3S3Jxd3++qo5I8uStXRYAAPNYN+a6\n+7op4B5bVUnyN9395i1fGQAA65rn1ay/keSZSS6Zvk6pquds9cIAAFjfPKdZH5Pkvt19bZJU1UuT\nnJfkF7dyYQAArG/eV6XeapWfAQBYoHmOzD03yXlV9bYkleQhSX55KxcFAMB85nkBxMuq6u1JHpBZ\nzP1yd398y1cGAMC6Vo25qvrmfTZdPH0/vKoO7+73b92yAACYx1pH5l60xn2d5Ns3eS0AAGzQqjHX\n3Q/ezoUAALBxPmMVAGBgYg4AYGBiDgBgYOu+NckKr2pNkquTXNrd12/+kgAAmNc8bxr8h0nuneSC\nzN5n7h5JPpjk0Ko6ubvftoXrAwBgDfOcZr0oyf26+97d/S1J7pfk/CSPSPLbW7k4AADWNk/M3WP5\nGwR39weS3Le7L17jMQAAbIN5TrN+pKp+P8mrptuPT3JxVR2S5NotWxkAAOuaJ+Z+KMlPJDk1s2vm\n3pnkWZmF3EP358mr6pFJfjfJQUle0t2n7XP/IUn+JLNTu/+a5PHd/bHpvmcleXKS65L8ZHeftT9r\n2V9veO/H87yzLsxln/lC7nibm+eUR9wtJ9znKHOb+0Yx91bPb25zm9vcB/rc+6O6ezFPXHVQkg8n\neXiSPUnOSfKE7v7HZWP+R5Jv7u6nVtWJSb63ux9fVfdM8sokxya5Y5K3JvmG7r5uredcWlrq3bt3\nb/rv8ob3fjzPev0H8oUvffnpb36Tg/Kbj/2m/d7J5jb3oufe6vnNbW5zm/tAn3s1VXVudy+tN27d\na+aq6oFV9eaq+seq+vDer01Y47FJLu7uS7r7i5mdxj1+nzHHJzlj+vm1SR5aVTVtf1V3/0d3fzTJ\nxdN8C/G8sy78ip2bJF/40nV53lkXmtvcw8+91fOb29zmNveBPvf+muc06x8leWaSczM7pblZjkpy\n6bLbe5I8YLUx3X1tVV2d5PBp+z/s89gVs7iqTk5ycpLc+c533pSF7+uyz3xhQ9vNbe6R5t7q+c1t\nbnOb+0Cfe3/N82rWz3b3n3f3Zd19xd6vTXjuWmHbvud8Vxszz2NnG7tP7+6l7l468sgjN7jE+dzx\nNjff0HZzm3ukubd6fnOb29zmPtDn3l/zxNzZVfWbVXX/qvrmvV+b8Nx7ktxp2e2jk1y22piqOjjJ\noUmumvOx2+aUR9wtN7/JQV+x7eY3OSinPOJu5jb38HNv9fzmNre5zX2gz72/5jnN+qB9viezo2Df\nvp/PfU6SY6rqLkk+nuTEJE/cZ8yZSU5K8vdJHpfk7O7uqjozySuq6gWZvQDimCTv2c/13GB7L3zc\nile4mNvci557q+c3t7nNbe4Dfe79tbBXsyZJVT06ye9k9tYkL+3u36iqZyfZ3d1nVtXNkvxpkvtk\ndkTuxO6+ZHrsLyT50czeIuXp3f3m9Z5vq17NCgCw2eZ9NeuqMVdVT+juV1bVT650f3f/3n6ucduJ\nOQBgFPPG3FqnWQ+bvm/NqwYAANhvq8Zcd//v6fsvbd9yAADYiHVfAFFVR2R2bdqu5eO7++StWxYA\nAPOY59Wsb8zsDXrfmc1902AAAPbTPDF3i+7+mS1fCQAAGzbPmwa/uaqO2/KVAACwYfPE3FOT/FVV\nXVNVV1XVp6vqqq1eGAAA65vnNOsRW74KAABukFVjrqqO6e6LktxrlSHv35olAQAwr7WOzJ2a5MlJ\nXrTCfZvx2awAAOyntd40+MnT9wdv33IAANiIea6ZS1XdPck9k9xs77bufsVWLQoAgPnM8wkQv5jk\nuCR3T3JWkkdk9gbCYg4AYMHmeWuSxyf5jiSXd/cPJvmWzHlEDwCArTVPzH2hu69Lcm1V3SrJJ5J8\n3dYuCwCAecxzhO29VXWbJC9NsjvJZ5Oct6WrAgBgLmvGXFVVkl/t7s8keVFVnZXk1t0t5gAAdoA1\nT7N2dyd507LbFws5AICdY55r5t5TVffd8pUAALBha32c18HdfW2SByX571X1kST/lqQyO2gn8AAA\nFmyta+bek+S+SU7YprUAALBBa8VcJUl3f2Sb1gIAwAatFXNHVtUzVruzu1+wBesBAGAD1oq5g5Lc\nMtMROgAAdp61Yu7y7n72tq0EAIANW+utSRyRAwDY4daKuYdu2yoAALhBVo257r5qOxcCAMDGzfMJ\nEAAA7FBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIO\nAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBg\nYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBi\nDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgC4m5qrptVb2lqi6avh+2yriT\npjEXVdVJ07avrqq/qKp/qqoLquq07V09AMDOsagjc6cmeVt3H5PkbdPtr1BVt03yK0kekOTYJL+y\nLPqe3913T3KfJN9WVY/anmUDAOwsi4q545OcMf18RpITVhjziCRv6e6ruvvTSd6S5JHd/fnufnuS\ndPcXk5yX5OhtWDMAwI6zqJj7mu6+PEmm77dbYcxRSS5ddnvPtO0/VdVtkjwms6N7K6qqk6tqd1Xt\nvvLKK/d74QAAO8nBWzVxVb01ye1XuOsX5p1ihW29bP6Dk7wyye919yWrTdLdpyc5PUmWlpZ6tXEA\nACPaspjr7oetdl9VXVFVd+juy6vqDkk+ucKwPUkesuz20Unesez26Uku6u7f2YTlAgAMaVGnWc9M\nctL080lJ3rjCmLOSHFdVh00vfDhu2paqek6SQ5M8fRvWCgCwYy0q5k5L8vCquijJw6fbqaqlqnpJ\nknT3VUl+Pck509ezu/uqqjo6s1O190xyXlWdX1U/tohfAgBg0ar7wLmMbGlpqXfv3r3oZQAArKuq\nzu3upfXG+QQIAICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICB\niTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5\nAICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCA\ngYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJ\nOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkA\ngIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICBiTkAgIGJOQCAgYk5AICB\niTkAgIGJOQCAgYk5AICBLSTmquq2VfWWqrpo+n7YKuNOmsZcVFUnrXD/mVX1wa1fMQDAzrSoI3On\nJnlbdx+T5G3T7a9QVbdN8itJHpDk2CS/sjz6quqxSa7ZnuUCAOxMi4q545OcMf18RpITVhjziCRv\n6e6ruvvTSd6S5JFJUlW3TPKMJM/ZhrUCAOxYi4q5r+nuy5Nk+n67FcYcleTSZbf3TNuS5NeT/HaS\nz6/3RFV1clXtrqrdV1555f6tGgBghzl4qyauqrcmuf0Kd/3CvFOssK2r6t5J7trdP11Vu9abpLtP\nT3J6kiwtLfWczw0AMIQti7nufthq91XVFVV1h+6+vKrukOSTKwzbk+Qhy24fneQdSb41yf2q6mOZ\nrf92VfWO7n5IAAAOMIs6zXpmkr2vTj0pyRtXGHNWkuOq6rDphQ/HJTmru1/c3Xfs7l1JHpTkw0IO\nADhQLSrmTkvy8Kq6KMnDp9upqqWqekmSdPdVmV0bd8709expGwAAk+o+cC4jW1pa6t27dy96GQAA\n66qqc7t7ab1xPgECAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIO\nAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBg\nYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBi\nDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4A\nYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYNXdi17D\ntqmqK5P886LXcQA6IsmnFr0INo39eeNhX9542Jc3Hsv35dd295HrPeCAijkWo6p2d/fSotfB5rA/\nbzzsyxsP+/LG44bsS6dZAQAGJuYAAAYm5tgOpy96AWwq+/PGw7688bAvbzw2vC9dMwcAMDBH5gAA\nBibm2FRVdaeqentVfaiqLqiqn5q237aq3lJVF03fD1v0WlnbGvvyV6vq41V1/vT16EWvlbVV1c2q\n6j1V9b5pX/7atP0uVfXu6e/y1VV100WvlfWtsT//uKo+uuxv896LXivzqaqDquq9VfWm6faG/jad\nZmVTVdUdktyhu8+rqlslOTfJCUl+OMlV3X1aVZ2a5LDu/rkFLpV1rLEv/1uSa7r7+QtdIHOrqkpy\ni+6+pqpukuSdSX4qyTOSvL67X1VV/yfJ+7r7xYtcK+tbY38+Ncmbuvu1C10gG1ZVz0iylOTW3f3d\nVfWabOBv05E5NlV3X97d500/fy7Jh5IcleT4JGdMw87ILArYwdbYlwymZ66Zbt5k+uok35lk73/4\n/V0OYo39yYCq6ugk35XkJdPtygb/NsUcW6aqdiW5T5J3J/ma7r48mUVCktstbmVs1D77MkmeVlXv\nr6qXOmU+huk0zvlJPpnkLUk+kuQz3X3tNGRPxPow9t2f3b33b/M3pr/NF1bVIQtcIvP7nSTPTHL9\ndPvwbPBvU8yxJarqlklel+Tp3f3ZRa+HG26FffniJF+f5N5JLk/y2wtcHnPq7uu6+95Jjk5ybJJ7\nrDRse1fFDbXv/qyqb0zyrCR3T3L/JLdN4lKWHa6qvjvJJ7v73OWbVxi65t+mmGPTTddwvC7Jy7v7\n9dPmK6ZrsPZei/XJRa2P+a20L7v7iuk/JNcn+b+ZhQGD6O7PJHlHkgcmuU1VHTzddXSSyxa1Lm6Y\nZfvzkdOlEd3d/5Hkj+JvcwTfluR7qupjSV6V2enV38kG/zbFHJtqOtf/h0k+1N0vWHbXmUlOmn4+\nKckbt3ttbMxq+3JvlE++N8kHt3ttbExVHVlVt5l+vnmSh2V2DeTbkzxuGubvchCr7M9/WvY/zJXZ\nNVb+Nne47n5Wdx/d3buSnJjk7O7+gWzwb9OrWdlUVfWgJH+X5AP58vn/n8/sWqvXJLlzkn9J8v3d\nfdVCFslc1tiXT8jsFGsn+ViSp+y9HpKdqaq+ObOLqA/K7H/iX9Pdz66qr8vsaMBtk7w3yZOmozrs\nYGvsz7OTHJnZabrzkzx12Qsl2OGq6iFJfnZ6NeuG/jbFHADAwJxmBQAYmJgDABiYmAMAGJiYAwAY\nmJgDABiYmAMOOFV1zfR9V1U9cZPn/vl9bv+/zZwfYF9iDjiQ7UqyoZirqoPWGfIVMdfd/2WDawLY\nEDEHHMhOS/Lgqjq/qn56+vDy51XVOdOHlT8lmb2ZZ1W9vapekdmbKKeq3lBV51bVBVV18rTttCQ3\nn+Z7+bRt71HAmub+YFV9oKoev2zud1TVa6vqn6rq5dM7+APM5eD1hwDcaJ2a6R3Xk2SKsqu7+/5V\ndUiSd1XVX09jj03yjd390en2j3b3VdPHKZ1TVa/r7lOr6mnTB6Dv67GZfXLGtyQ5YnrM30733SfJ\nvTL7/MV3ZfZ5je/c/F8XuDFyZA7gy45L8kNVdX5mH0F3eJJjpvvesyzkkuQnq+p9Sf4hyZ2WjVvN\ng5K8sruv6+4rkvxNkvsvm3tPd1+f2ccw7dqU3wY4IDgyB/BlleQnuvusr9g4+8zEf9vn9sOSfGt3\nf76q3pHkZnPMvZrln7l4Xfy7GdgAR+aAA9nnktxq2e2zkvx4Vd0kSarqG6rqFis87tAkn55C7u5J\nHrjsvi/tffw+/jbJ46fr8o5M8u1J3rMpvwVwQPN/f8CB7P1Jrp1Ol/5xkt/N7BTnedOLEK5McsIK\nj/urJE+tqvcnuTCzU617nZ7k/VV1Xnf/wLLtf5bkW5O8L0kneWZ3f2KKQYAbrLp70WsAAOAGcpoV\nAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGBiDgBgYGIOAGBgYg4AYGD/H5gjj3MkKmUBAAAAAElFTkSu\nQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2024c30afd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Use a three-layer Net to overfit 50 training examples.\n",
     "\n",
@@ -1108,7 +1191,7 @@
     "}\n",
     "\n",
     "weight_scale = 1\n",
-    "learning_rate = 1\n",
+    "learning_rate = 0.0001\n",
     "model = FullyConnectedNet([100, 100],\n",
     "              weight_scale=weight_scale, dtype=np.float64)\n",
     "solver = Solver(model, small_data,\n",
@@ -1154,6 +1237,32 @@
     "}\n",
     "\n",
     "# implement your training code here\n",
+    "weight_scale = 1\n",
+    "learning_rate = 0.00001\n",
+    "\n",
+    "model = FullyConnectedNet([100, 100, 100, 100, 100],\n",
+    "              weight_scale=weight_scale, dtype=np.float64)\n",
+    "solver = Solver(model, small_data,\n",
+    "                print_every=10, num_epochs=20, batch_size=25,\n",
+    "                update_rule='sgd',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': learning_rate,\n",
+    "                }\n",
+    "         )\n",
+    "\n",
+    "\n",
+    "model = FullyConnectedNet([100]*5,\n",
+    "              weight_scale=weight_scale, dtype=np.float64)\n",
+    "solver = Solver(model, small_data,\n",
+    "                print_every=10, num_epochs=20, batch_size=25,\n",
+    "                update_rule='sgd',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': learning_rate,\n",
+    "                },\n",
+    "                lr_decay=1\n",
+    "         )\n",
+    "solver.train()\n",
+    "\n",
     "\n",
     "plt.plot(solver.loss_history, 'o')\n",
     "plt.title('Training loss history')\n",
