--- a/3_Dropout.ipynb
+++ b/3_Dropout.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -52,9 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:  (48000, 3, 32, 32)\n",
+      "y_train:  (48000,)\n",
+      "X_val:  (1000, 3, 32, 32)\n",
+      "y_val:  (1000,)\n",
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "\n",
@@ -75,9 +88,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running tests with p =  0.3\n",
+      "Mean of input:  10.0002369697\n",
+      "Mean of train-time output:  10.0161242274\n",
+      "Mean of test-time output:  10.0002369697\n",
+      "Fraction of train-time output set to zero:  0.298812\n",
+      "Fraction of test-time output set to zero:  0.0\n",
+      "\n",
+      "Running tests with p =  0.6\n",
+      "Mean of input:  10.0002369697\n",
+      "Mean of train-time output:  10.0138918643\n",
+      "Mean of test-time output:  10.0002369697\n",
+      "Fraction of train-time output set to zero:  0.599476\n",
+      "Fraction of test-time output set to zero:  0.0\n",
+      "\n",
+      "Running tests with p =  0.75\n",
+      "Mean of input:  10.0002369697\n",
+      "Mean of train-time output:  9.90079528372\n",
+      "Mean of test-time output:  10.0002369697\n",
+      "Fraction of train-time output set to zero:  0.752396\n",
+      "Fraction of test-time output set to zero:  0.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.random.randn(500, 500) + 10\n",
     "\n",
@@ -105,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.random.randn(10, 10) + 10\n",
@@ -130,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
@@ -165,6 +210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -199,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot train and validation accuracies of the two models\n",
