Add dropout backward pass.

--- a/3_Dropout.ipynb
+++ b/3_Dropout.ipynb
@@ -145,11 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx relative error:  1.89290326252e-11\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.random.randn(10, 10) + 10\n",
     "dout = np.random.randn(*x.shape)\n",
@@ -172,11 +178,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running check with dropout =  0\n",
+      "Initial loss:  2.3051948274\n",
+      "W1 relative error: 2.53e-07\n",
+      "W2 relative error: 1.50e-05\n",
+      "W3 relative error: 2.75e-07\n",
+      "b1 relative error: 2.94e-06\n",
+      "b2 relative error: 5.05e-08\n",
+      "b3 relative error: 1.17e-10\n",
+      "\n",
+      "Running check with dropout =  0.25\n",
+      "Initial loss:  2.30520775465\n",
+      "W1 relative error: 2.61e-07\n",
+      "W2 relative error: 5.02e-07\n",
+      "W3 relative error: 4.46e-08\n",
+      "b1 relative error: 7.40e-08\n",
+      "b2 relative error: 7.15e-10\n",
+      "b3 relative error: 1.00e-10\n",
+      "\n",
+      "Running check with dropout =  0.5\n",
+      "Initial loss:  2.30356675866\n",
+      "W1 relative error: 1.14e-06\n",
+      "W2 relative error: 1.85e-07\n",
+      "W3 relative error: 6.60e-09\n",
+      "b1 relative error: 7.72e-08\n",
+      "b2 relative error: 1.20e-09\n",
+      "b3 relative error: 1.16e-10\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
     "X = np.random.randn(N, D)\n",
