Fix bug in loss average calculation

--- a/1_FullyConnectedNets.ipynb
+++ b/1_FullyConnectedNets.ipynb
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -1731,38 +1731,22 @@
      "text": [
       "\n",
       "\n",
-      "Iteration 0/2 -> 0.00%\n",
+      "Iteration 0/35 -> 0.00%\n",
       "Parameters\n",
-      "\tLearning rate 0.27209987067489116\n",
-      "\tRegularization 0.3095571650746547\n",
+      "\tLearning rate 0.0018526146715892274\n",
+      "\tRegularization 0.01\n",
       "\tHidden layers [500, 100, 100, 100]\n",
-      "\tDropout: 0.22509749815943458\n",
+      "\tDropout: 0.18397831848336735\n",
       "\n",
       "Epoch\tTrain Loss\tTrain accuracy\t\tTest Loss\tTest accuracy\tDuration\n",
       "=====================================================================================================\n",
-      "1\tnan\t\t8.30%\t\t\tinf\t\t8.40%\t\t53.353\n",
-      "2\tnan\t\t13.40%\t\t\tinf\t\t11.80%\t\t52.015\n",
-      "3\tnan\t\t12.60%\t\t\tinf\t\t12.00%\t\t53.013\n",
-      "4\tnan\t\t10.40%\t\t\tinf\t\t12.50%\t\t52.484\n",
-      "5\tnan\t\t9.70%\t\t\tinf\t\t8.50%\t\t52.659\n",
-      "6\tnan\t\t10.60%\t\t\tinf\t\t11.60%\t\t53.749\n",
-      "7\tnan\t\t11.50%\t\t\tinf\t\t9.60%\t\t52.015\n",
-      "8\tnan\t\t10.50%\t\t\tinf\t\t9.70%\t\t53.922\n",
-      "9\tnan\t\t9.10%\t\t\tinf\t\t8.00%\t\t52.374\n",
-      "> Early Stopping after 5 epochs of no improvements.\n",
-      "> Restoring params of best model with validation accuracy of:  0.125\n",
-      "=====================================================================================================\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-eaabad285f9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     69\u001b[0m     \u001b[0my_train_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'X_train'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'y_train'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[0my_val_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'X_val'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'y_val'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m     \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mregularization\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhidden_dims\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdropout_value\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0my_val_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m     \u001b[0mall_classifiers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_val_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+      "1\t0.07929\t\t28.90%\t\t\t3.20340\t\t27.20%\t\t5.272\n",
+      "2\t2.94067\t\t32.70%\t\t\t2.79974\t\t29.50%\t\t5.327\n",
+      "3\t2.73221\t\t34.70%\t\t\t2.69298\t\t29.10%\t\t5.436\n",
+      "4\t2.57846\t\t36.30%\t\t\t2.58899\t\t29.80%\t\t5.423\n",
+      "5\t2.51669\t\t38.40%\t\t\t2.43805\t\t31.90%\t\t4.990\n",
+      "6\t2.40128\t\t37.10%\t\t\t2.41301\t\t32.50%\t\t4.790\n",
+      "7\t2.33533\t\t34.10%\t\t\t2.39401\t\t33.40%\t\t4.784\n"
      ]
     }
    ],
@@ -1778,7 +1762,7 @@
     "results = {}\n",
     "best_val = -1\n",
     "all_classifiers = []\n",
-    "grid_search_iterations = 2\n",
+    "grid_search_iterations = 35\n",
     "\n",
     "# define datapoints for the random grid search\n",
     "hidden_values = [\n",
@@ -1801,27 +1785,28 @@
     "\n",
     "dropout_values = (0.0, 0.8)\n",
     "learning_values = (1, 9)\n",
-    "learning_values_e = (-2, -0.01)\n",
+    "learning_values_e = (-6, -3)\n",
     "regularization_values = (1e-5, 0.5)\n",
     "\n",
     "for grid_iteration in range(grid_search_iterations):\n",
     "    # generate random values for hyperparameters\n",
-    "    hidden_dims = hidden_values[random.randint(0, len(hidden_values) - 1)]\n",
+    "    hidden_index = random.randint(0, len(hidden_values) - 1)\n",
+    "    hidden_dims = hidden_values[hidden_index]\n",
     "    dropout_value = random.uniform(dropout_values[0], dropout_values[1])\n",
     "    \n",
     "    learning_rate_1 = random.uniform(learning_values[0], learning_values[1])\n",
     "    learning_rate_2 = random.uniform(learning_values_e[0], learning_values_e[1])\n",
     "    learning_rate = learning_rate_1 * (10 ** learning_rate_2) \n",
     "    \n",
-    "    regularization = random.uniform(regularization_values[0], regularization_values[1])\n",
+    "    regularization = 1e-2\n",
     "\n",
     "\n",
     "    model = FullyConnectedNet(hidden_dims, weight_scale=2.5e-2,\n",
     "              dropout=dropout_value,\n",
     "              use_batchnorm=True, reg=regularization)\n",
     "\n",
-    "    solver = Solver(model, data,\n",
-    "              num_epochs=100, batch_size=100,\n",
+    "    solver = Solver(model, small_data,\n",
+    "              num_epochs=50, batch_size=100,\n",
     "              update_rule=update_rule,\n",
     "              early_stopping=5,\n",
     "              optim_config={\n",
@@ -1837,7 +1822,7 @@
     "    # train to get loss and accuracy\n",
     "    y_train_pred = solver.check_accuracy(data['X_train'], data['y_train'])\n",
     "    y_val_pred = solver.check_accuracy(data['X_val'], data['y_val'])\n",
-    "    results[(learning_rate, regularization, hidden_dims, dropout_value)] = (y_val_pred, y_train_pred)\n",
+    "    results[(learning_rate, regularization, hidden_index, dropout_value)] = (y_val_pred, y_train_pred)\n",
     "    all_classifiers.append((model, y_val_pred))\n",
     "\n",
     "    # save if best        \n",
